bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:2: error: not found: value abs
  if((abs(100-n)<=10 || abs(200-n)<=10))
      ^NearHundred:2: error: not found: value abs
  if((abs(100-n)<=10 || abs(200-n)<=10))
                        ^